--- a/ElectricField/ElectricField.vcxproj
+++ b/ElectricField/ElectricField.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{BA08F411-BC66-4C99-B785-AAFAB6943073}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>ElectricField</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -155,7 +155,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="INI_Reader.cpp" />
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="iniFileStructure.h" />
+    <ClInclude Include="INI_Reader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
