--- a/ElectricFieldGPU/ElectricFieldGPU.vcxproj
+++ b/ElectricFieldGPU/ElectricFieldGPU.vcxproj
@@ -13,7 +13,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{A4D035F9-FB57-49E3-B005-C3E03230D033}</ProjectGuid>
     <RootNamespace>ElectricFieldGPU</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -65,6 +65,7 @@
       <TargetMachinePlatform>64</TargetMachinePlatform>
       <Include>%(Include)</Include>
       <UseHostInclude>true</UseHostInclude>
+      <CodeGeneration>compute_30,sm_30;compute_37,sm_37;compute_50,sm_50;compute_52,sm_52;compute_60,sm_60;compute_61,sm_61;compute_70,sm_70;compute_75,sm_75;%(CodeGeneration)</CodeGeneration>
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -86,10 +87,30 @@
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
       <Include>%(Include)</Include>
+      <CodeGeneration>compute_30,sm_30;compute_37,sm_37;compute_50,sm_50;compute_52,sm_52;compute_60,sm_60;compute_61,sm_61;compute_70,sm_70;compute_75,sm_75;%(CodeGeneration)</CodeGeneration>
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="kernel.cu" />
+    <CudaCompile Include="ElecticFieldCalculatorKernel.cu">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
+    </CudaCompile>
+    <CudaCompile Include="kernel.cu">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <FileType>CppClass</FileType>
+    </CudaCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="ChargesManager.cpp" />
+    <ClCompile Include="GPUElectricFieldCalculator.cpp" />
+    <ClCompile Include="INI_Reader.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ChargesManager.h" />
+    <ClInclude Include="ElectricFieldCalculatorKernel.h" />
+    <ClInclude Include="GPUElectricFieldCalculator.h" />
+    <ClInclude Include="iniFileStructure.h" />
+    <ClInclude Include="INI_Reader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
