--- a/ElectricFieldGPU/config.ini
+++ b/ElectricFieldGPU/config.ini
@@ -2,6 +2,7 @@
 Width=1400
 Height=1000
 NumberOfCharges=1024
-ConstK=10000
-TopPercent=0.8
-BotPercent=0
+ElectricForceCoefficient=0.8
+BlockSize=1024
+ChargeMinVelocity=1
+ChargeMaxVelocity=5
