--- a/ElectricFieldGPU/ElectricFieldGPU.vcxproj.filters
+++ b/ElectricFieldGPU/ElectricFieldGPU.vcxproj.filters
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <CudaCompile Include="kernel.cu" />
     <CudaCompile Include="ElecticFieldCalculatorKernel.cu" />
   </ItemGroup>
   <ItemGroup>
@@ -28,6 +27,12 @@
     <ClInclude Include="ElectricFieldCalculatorKernel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ElectricFieldImageCreator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ConfigLoader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="INI_Reader.cpp">
@@ -37,6 +42,13 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="GPUElectricFieldCalculator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="ElectricFieldImageCreator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ConfigLoader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
