--- a/ElectricFieldGPU/config.ini
+++ b/ElectricFieldGPU/config.ini
@@ -1,8 +1,9 @@
 [Config]
 Width=1400
 Height=1000
-NumberOfCharges=1024
-ElectricForceCoefficient=0.8
+NumberOfCharges=10
+ElectricForceCoefficient=0.75
 BlockSize=1024
-ChargeMinVelocity=1
-ChargeMaxVelocity=5
+ChargeMinVelocity=2
+ChargeMaxVelocity=6
+GpuModeEnabled=0
