--- a/ElectricFieldGPU/ElectricFieldGPU.vcxproj.filters
+++ b/ElectricFieldGPU/ElectricFieldGPU.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="ConfigLoader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CPUElectricFieldCalculator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="INI_Reader.cpp">
@@ -49,6 +52,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ConfigLoader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CPUElectricFieldCalculator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
