Hotfix for customizable number of operations done by one thread

--- a/ElectricFieldGPU/config.ini
+++ b/ElectricFieldGPU/config.ini
@@ -1,8 +1,9 @@
 [Config]
-Width=800
-Height=900
+Width=1000
+Height=1000
 NumberOfCharges=2048
-ElectricForceCoefficient=0.5
+MaxChargesInOneThreadRun=2048
+ElectricForceCoefficient=0.0
 BlockSize=1024
 ChargeMinVelocity=2
 ChargeMaxVelocity=6
